--- a/test/InfluxDB.Tests/InfluxDB.Tests.csproj
+++ b/test/InfluxDB.Tests/InfluxDB.Tests.csproj
@@ -2,9 +2,10 @@
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp2.0</TargetFrameworks>
-    <AssemblyName>InfluxDB.LineProtocol.Tests</AssemblyName>
+    <AssemblyName>InfluxDB.Tests</AssemblyName>
     <PackageId>InfluxDB.LineProtocol.Tests</PackageId>
     <RuntimeFrameworkVersion>2.0.0</RuntimeFrameworkVersion>
+    <RootNamespace>InfluxDB</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
